--- a/templates/home.page.gohtml
+++ b/templates/home.page.gohtml
@@ -1,9 +1,10 @@
-{{template "base"}}
+{{template "base" .}}
 {{define "content"}}
 <div class="container">
   <div class="row">
     <div class="col">
       <h1>The Home Page</h1>
+      <p>This came from the template: {{index .StringMap "test"}}</p>
     </div>
   </div>
 </div>
