--- a/templates/base.layout.gohtml
+++ b/templates/base.layout.gohtml
@@ -18,7 +18,27 @@
 
 {{block "js" .}}
 {{end}}
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+
+<script>
+  function notify(msg, msgType){
+      notie.Alert({
+          type:msgType,
+          text: msg
+      })
+  }
+
+  {{with .Error}}
+  notify("{{.}}", "error")
+  {{end}}
+  {{with .Flash}}
+  notify("{{.}}", "flash")
+  {{end}}
+  {{with .Warning}}
+  notify("{{.}}", "warning")
+  {{end}}
+</script>
 </body>
 </html>
 {{end}}
